Update covid-19 detection using yolov5.ipynb

--- a/covid-19 detection using yolov5.ipynb
+++ b/covid-19 detection using yolov5.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## What is Weights and Biases?\n",
     "\n",
-    "Weights and bias is platform for experiment tracking wchich is very helpful for debugging purpose and analyazing\n",
+    "Weights and bias is platform for experiment tracking which is very helpful for debugging purpose and analyazing\n",
     "\n",
     "\n"
    ]
@@ -1254,7 +1254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The predictions are stored in weights and bias for this experiment(.txt files),which you can download it from there"
+    "### The predictions are stored in weights and bias for this experiment(.txt files),which can download can be from there"
    ]
   }
  ],
